[metadata]
name = arcade-roguelike
description = A Complete Roguelike Tutorial using Python and the Arcade library
long_description = file: README.md
author = Darren Eberly
author-email = darren.eberly@gmail.com
license = MIT
license-file = LICENSE
url = https://github.com/Cleptomania/arcade-roguelike

classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Games/Entertainment :: Arcade
  Topic :: Education

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires =
  setuptools >= 40.6
  pip >= 10
install_requires =
  arcade >= 2.6.0

[options.packages.find]
include =
  roguelike
  roguelike.*

[options.extras_require]
tests =
  black
  flake8
  isort

docs =
  mkdocs
  mkdocs-material
  mdx-include

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
line_length=88

[flake8]
max-line-length=88
exclude=.git,__pycache__,__init__.py